Fix some spacing glitches on the front page

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -222,10 +222,6 @@ article h3:before {
 
 /* Styling */
 
-.home p {
-    margin-bottom: 1em;
-}
-
 div.home {
     background-color: rgba(255, 255, 255, 0.9);
     border-radius: 0.25em;
@@ -268,7 +264,7 @@ div.home {
 }
 
 .post-list li {
-    margin-bottom: 0;
+    margin-bottom: 1em;
     padding-bottom: 0;
 }
 
@@ -353,6 +349,7 @@ header.post-header .page-description {
     display: inline;
     font-size: normal;
     margin-right: 0.5em;
+    margin-bottom: 0;
 }
 
 .post-meta-keywords-list {
